--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -7,3 +7,5 @@ $very-dark-blue: hsl(208, 49%, 24%);
 $grayish-blue: hsl(240, 2%, 87%);
 $primary-cta: hsl(355, 100%, 74%);
 $very-light-gray: hsl(240, 1%, 95%);
+$very-dark-gray-blue: hsl(237, 17%, 21%);
+$very-dark-desaturated-blue: hsl(237, 23%, 32%);
