--- a/scss/_navigation.scss
+++ b/scss/_navigation.scss
@@ -5,11 +5,21 @@
     transform: translateX(-50%);
     height: 10rem;
     padding: 7rem 0 3rem;
-    @include d-flex(flex, space-between, flex-start);
     font-weight: 600;
     z-index: 9;
+    width: 100%;
+    -webkit-transition: .2s ease-in-out;
+    transition: .2s ease-in-out;
 
+    &--fixed {
+        background: red;
+        padding: 2rem 0;
+        height: auto;
+    }
 
+    .container {
+        @include d-flex(flex, space-between, flex-start);
+    }
 
     &__inner {
         visibility: hidden;
@@ -20,7 +30,7 @@
         border-radius: 1rem;
         position: absolute;
         top: 14rem;
-        width: 100%;
+        width: 85%;
         left: 50%;
         height: auto;
         max-height: calc(75vh - 7rem);
@@ -182,8 +192,6 @@
     }
 
     @include breakpoint(56.25em) {
-        height: 34rem;
-        min-height: 34rem;
 
         &__inner {
             opacity: 1;
@@ -197,8 +205,9 @@
             box-shadow: none;
             background: transparent;
             padding: 0 0 0 5rem;
-            @include d-flex(flex, space-between, flex-start);
+            @include d-flex(flex, space-between, center);
             overflow-y: inherit;
+            width: 100%;
         }
 
         &__left,
@@ -229,8 +238,8 @@
             width: 12rem;
             -webkit-backdrop-filter: blur(.6rem);
             backdrop-filter: blur(.6rem);
-            -webkit-box-shadow: 0 1rem 2rem rgba(black, .2);
-            box-shadow: 0 1rem 2rem rgba(black, .2);
+            -webkit-box-shadow: 0 1rem 2rem rgba(black, .1);
+            box-shadow: 0 1rem 2rem rgba(black, .1);
 
             @supports ((-webkit-backdrop-filter: blur(.6rem)) or (backdrop-filter: blur(.6rem))) {
                 background: rgba($w, .6);
