--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -9,3 +9,4 @@ $primary-cta: hsl(355, 100%, 74%);
 $very-light-gray: hsl(240, 1%, 95%);
 $very-dark-gray-blue: hsl(237, 17%, 21%);
 $very-dark-desaturated-blue: hsl(237, 23%, 32%);
+$very-dark-black-blue: hsl(240, 10%, 16%)
